public/css/style.css
* {
  margin: 0;
  padding: 0;
}

a {
  color: white;
}

body {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
  font-family: "Solway", "Merriweather", serif;
  background-color: #f5efe7;
  overflow-x: hidden;
}

#top-logo {
  text-align: center;
  font-size: xxx-large;
}

h2 {
  color: black;
}

#comments {
  color: black;
  margin-left: -235px;
}

#comment-button {
  margin-left: -3px;
  align-self: center;
  max-width: 100%;
}

#post {
  display: flex;
  flex-direction: column;
  width: 100%;
}

#top-shoe {
  text-align: center;
}

.header-img {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 100vh;
}

#login-nav {
  color: cornsilk;
  background-color: black;
  border-radius: 12px;
  box-shadow: 0 12px 16px 0 rgb(119 114 114 / 24%),
    0 17px 50px 0 rgb(0 0 0 / 19%);
  width: 140px;
  margin: 20px;
}

#logout {
  height: 50px;
  font-size: 25px;
  width: 100px;
  position: absolute;
  margin-left: 140px;
}

#first-img {
  padding-top: 5%;
}

.body-img {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.post-img {
  max-width: 50%;
  align-self: center;
}
.body-sections-img {
  display: flex;
  flex-direction: column;
}

.img-info-description {
  display: flex;
  flex-direction: column;
  line-height: 15px;
  width: 50%;
  padding: 20px 17px 15px 288px;
  justify-content: center;
}

.img-info-text {
  padding-bottom: 10px;
  text-align: center;
}

#searchbar_input {
  position: absolute;
  top: 0;
  width: 22%;
  right: 10px;
  color: white;
}

#search_icon_click {
  position: absolute;
  top: 0;
  right: 0;
}

#top-logo {
  position: absolute;
  top: 0;
  width: 100%;
}

#btn-one {
  color: cornsilk;
  background-color: black;
  border-radius: 12px;
  box-shadow: 0 12px 16px 0 rgba(119, 114, 114, 0.24),
    0 17px 50px 0 rgba(0, 0, 0, 0.19);
  cursor: pointer;
  margin: 5px;
  width: 110px;
}

button:focus {
  background-color: cornflowerblue;
}

#pic-4 {
  width: 568px;
}

.comments {
  border-radius: 12px;
  width: 20px;
}

#profile-img {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 47px 0px 30px 0px;
}

#profile-picture {
  height: 500px;
  padding-top: 16%;
}

.profile-selling-img {
  display: flex;
  flex-direction: row;
  line-height: 15px;
  width: 100%;
  padding: 20px 0px 35px 0px;
}

#available-shoes {
  height: 800px;
  width: 900px;
  padding-top: 4%;
  padding-bottom: 4%;
  padding-right: 4%;
}

#nude-shoe {
  padding: 140px 0px 10px 40px;
}

#nude-shoe p {
  padding: 87px 0px 20px 8px;
  font-weight: 900;
}

.img-info-text {
  padding-bottom: 10%;
}

#line {
  text-align: center;
  text-decoration-color: black;
  font-weight: 5000;
  border-style: outset;
  border-bottom-color: black;
  padding-top: 3%;
}

#line-2 {
  text-align: center;
  text-decoration-color: black;
  font-weight: 900;
  font-weight: 5000;
  border-style: outset;
  border-bottom-color: black;
}

#shoes-sold-1 {
  padding: 15px 15px 20px 15px;
  height: 700px;
  width: 565px;
}

#shoes-sold-2 {
  height: 695px;
  padding: 15px 15px 15px 15px;
}

.profile-selling-img {
  padding: 85px 10px 5px 101px;
}

.login-container {
  padding: 279px 290px 35px 290px;
}

#button-login {
  color: cornsilk;
  background-color: black;
  border-radius: 12px;
  box-shadow: 0 12px 16px 0 rgb(119 114 114 / 24%),
    0 17px 50px 0 rgb(0 0 0 / 19%);
  width: 206px;
  cursor: pointer;
  margin: 13px;
  align-items: center;
}
.comments-container {
  padding: 72px 2px 0px 4px;
  position: relative;
}

#comments {
  height: 7rem;
  font-size: 2rem;
  width: 70rem;
}

.mutual-convo {
  height: 85px;
  border-style: solid;
  border-color: black;
}

.comment-section {
  background-color: whitesmoke;
  text-align: center;
  left: 50%;
  position: absolute;
  top: 210px;
  left: 350px;
  width: 700px;
}

#textarea {
  padding: 0px 20px 20px 225px;
  position: absolute;
  top: 112px;
  left: -159px;
  height: 200px;
  width: 200px;
  text-transform: uppercase;
}

#comment-pic {
  background: no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  min-width: 100%;
  height: 700px;
  display: block;
}

#button-comment {
  color: cornsilk;
  background-color: black;
  border-radius: 12px;
  box-shadow: 0 12px 16px 0 rgb(119 114 114 / 24%),
    0 17px 50px 0 rgb(0 0 0 / 19%);
  width: 206px;
  cursor: pointer;
  position: absolute;
  top: 225px;
  left: 244px;
  height: 27px;
  width: 200px;
}

#comment-pic-2 {
  background: no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  min-width: 100%;
  height: 700px;
  display: block;
}

#post-img {
  position: absolute;
  top: 112px;
  text-align: center;
  left: 50%;
  position: absolute;
  top: 210px;
  left: 350px;
  width: 700px;
}

input[type="file"] {
  color: cornsilk;
  background-color: black;
  border-radius: 12px;
  box-shadow: 0 12px 16px 0 rgb(119 114 114 / 24%),
    0 17px 50px 0 rgb(0 0 0 / 19%);
  width: 206px;
  cursor: pointer;
}

input[type="submit"] {
  color: cornsilk;
  background-color: black;
  border-radius: 12px;
  box-shadow: 0 12px 16px 0 rgb(119 114 114 / 24%),
    0 17px 50px 0 rgb(0 0 0 / 19%);
  width: 206px;
  cursor: pointer;
}

#button-dashboard-4 {
  color: cornsilk;
  background-color: black;
  border-radius: 12px;
  box-shadow: 8 12px 16px 0 rgb(119 114 114 / 24%),
    0 17px 50px 0 rgb(0 0 0 / 19%);
  cursor: pointer;
  position: absolute;
  top: 1295px;
  left: 1020px;
  height: 27px;
  width: 200px;
}
#button-dashboard-3 {
  color: cornsilk;
  background-color: black;
  border-radius: 12px;
  box-shadow: 8 12px 16px 0 rgb(119 114 114 / 24%),
    0 17px 50px 0 rgb(0 0 0 / 19%);
  cursor: pointer;
  position: absolute;
  top: 1260px;
  left: 1020px;
  height: 27px;
  width: 200px;
}

#button-dashboard-2 {
  color: cornsilk;
  background-color: black;
  border-radius: 12px;
  box-shadow: 8 12px 16px 0 rgb(119 114 114 / 24%),
    0 17px 50px 0 rgb(0 0 0 / 19%);
  cursor: pointer;
  position: absolute;
  top: 1225px;
  left: 1020px;
  height: 27px;
  width: 200px;
}

#button-dashboard-1 {
  color: cornsilk;
  background-color: black;
  border-radius: 12px;
  box-shadow: 8 12px 16px 0 rgb(119 114 114 / 24%),
    0 17px 50px 0 rgb(0 0 0 / 19%);
  width: 206px;
  cursor: pointer;
  position: absolute;
  left: 600px;
  height: 27px;
  width: 200px;
  margin: 0px 0px 25px 0px;
  
}

.hamburger {
  position: absolute;
  top: 24px;
  left: 15px;
  z-index: 100;
  cursor: pointer;
  background-color: black;
  border: none;
}

.closeIcon {
  display: none;
  color: white;
}

.menu {
  position: fixed;
  transform: translateY(-100%);
  transition: transform 0.2s;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 99;
  background: black;
  color: white;
  list-style: none;
  padding-top: 4rem;
}

.showMenu {
  transform: translateY(0);
}

.nav-link {
  color: white;
}

.nav-item {
  display: block;
  margin: 2rem 4rem;
  font-size: 1.8rem;
}

.nav-item:hover {
  text-decoration: underline;
}

#upload-post {
  width: 100%;
  height: 8rem;
  background-color: transparent;
}

/* #upload-btn{
  color: cornsilk;
  background-color: black;
  border-radius: 12px;
  box-shadow: 0 12px 16px 0 rgb(119 114 114 / 24%), 0 17px 50px 0 rgb(0 0 0 / 19%);
  width: 206px;
  cursor: pointer;
  position: absolute;
  top: 225px;
  left: 244px;
  height: 27px;
  width: 200px;
} */

#button-sign-up {
  color: cornsilk;
  background-color: black;
  border-radius: 12px;
  box-shadow: 0 12px 16px 0 rgb(119 114 114 / 24%),
    0 17px 50px 0 rgb(0 0 0 / 19%);
  width: 140px;
  margin: 20px;
}

.img-info-description-dashboard {
  display: flex;
  flex-direction: column;
  line-height: 15px;
  width: 50%;
  justify-content: center;
}

.img-info-text-dashboard {
  padding-bottom: 15px;
  text-align: center;
  padding-top: 4%;
}

/* @media only screen and (max-width: 601px) {
  * {
    display: flex;
    flex-wrap: wrap;
  }
}

@media screen and (max-width: 1023px) {
  :root {
    layout-content-vertical-padding: 40px;
  }
} */

/* @media screen and (min-width: 349px){
  * {
    display: flex;
    flex-wrap: wrap;
  }
}  */

